self_hosted/k8s/pdfding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdfding
  namespace: production
  labels:
    app: pdfding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdfding
  template:
    metadata:
      labels:
        app: pdfding
    spec:
      containers:
      - name: pdfding
        image: mrmn/pdfding:v1.5.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: pdfding-data
          mountPath: /home/nonroot/pdfding/db
        - name: pdfding-media
          mountPath: /home/nonroot/pdfding/media
      volumes:
      - name: pdfding-data
        persistentVolumeClaim:
          claimName: pdfding-data-pvc
      - name: pdfding-media
        persistentVolumeClaim:
          claimName: pdfding-media-pvc
