self_hosted/k8s/pdfding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdfding
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: pdfding
  ports:
    - port: 80
      targetPort: 8000
